<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_register_name"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext_style"
        android:hint="@string/hint_user"
        android:paddingLeft="10dp"
        android:textColor="@color/light_black"
        android:textCursorDrawable="@null"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_style"
        android:hint="@string/hint_email"
        android:paddingLeft="10dp"
        android:textColor="@color/light_black"
        android:textCursorDrawable="@null"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/et_register_pwd"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:background="@drawable/edittext_style"
        android:hint="@string/hint_pwd"
        android:paddingLeft="10dp"
        android:textColor="@color/light_black"
        android:textCursorDrawable="@null"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/et_register_repwd"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:background="@drawable/edittext_style"
        android:hint="@string/hint_repwd"
        android:paddingLeft="10dp"
        android:textColor="@color/light_black"
        android:textCursorDrawable="@null"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_style"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20dp" />

</LinearLayout>