<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_name"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/edittext_style"
            android:hint="@string/hint_user"
            android:paddingLeft="10dp"
            android:textColor="@color/light_black"
            android:textCursorDrawable="@null"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:inputType="textPassword"
            android:background="@drawable/edittext_style"
            android:hint="@string/hint_pwd"
            android:paddingLeft="10dp"
            android:textColor="@color/light_black"
            android:textCursorDrawable="@null"
            android:textSize="20dp" />

        <CheckBox
            android:id="@+id/cb_auto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:drawablePadding="0dp"
            android:text="@string/remember_pwd"
            android:textColor="@color/orange"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_style"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/tv_find_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/image_divider"
            android:text="@string/forget_pwd"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/image_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@null"
            android:paddingBottom="15dp"
            android:src="@drawable/pwd_register_line_divider" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/image_divider"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </RelativeLayout>

</RelativeLayout>