<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/page_bg_grey"
    android:orientation="vertical" >
    
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/add_device_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height_size"
        android:background="@color/title_bg_black"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/ib_modify_pwd_back"
            android:layout_width="60dp"
            android:layout_height="@dimen/title_height_size"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/title_more_xml"
            android:contentDescription="@null"
            android:gravity="center_vertical|center_horizontal"
            android:src="@drawable/btn_title_back_unselected" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/modify_pwd"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size" />
    </RelativeLayout>

    <EditText
        android:id="@+id/et_modify_old_pwd"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_style"
        android:hint="@string/old_pwd"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="@color/light_black"
        android:textCursorDrawable="@null"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/et_modify_new_pwd"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_style"
        android:hint="@string/new_pwd"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="@color/light_black"
        android:textCursorDrawable="@null"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/et_modify_new_repwd"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_style"
        android:hint="@string/new_repwd"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textColor="@color/light_black"
        android:textCursorDrawable="@null"
        android:textSize="20dp" />
    
    <Button
        android:id="@+id/btn_modify_pwd_submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_style"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="20dp" />

</LinearLayout>