<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg_grey"
    android:orientation="vertical" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/add_device_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height_size"
        android:background="@color/title_bg_black"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btn_about_back"
            android:layout_width="60dp"
            android:layout_height="@dimen/title_height_size"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/title_more_xml"
            android:contentDescription="@null"
            android:gravity="center_vertical|center_horizontal"
            android:src="@drawable/btn_title_back_selected" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about"
            android:textColor="@color/orange"
            android:textSize="@dimen/title_text_size" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/page_bg_grey"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/layout_about_software"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10.0dip"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/page_view_bg" >

                <TextView
                    android:id="@+id/about_software"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/about_software"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/video_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/about_software"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@null"
                    android:src="@drawable/video_logo" />

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/video_logo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/light_black"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/app_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:text="@string/app_version"
                    android:textColor="@color/light_black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/company_website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/app_version"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:autoLink="web"
                    android:gravity="center"
                    android:linksClickable="true"
                    android:text="@string/company_website"
                    android:textColor="@color/light_black"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/company_website"
                    android:layout_below="@id/company_website"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:autoLink="phone"
                    android:linksClickable="true"
                    android:paddingBottom="10dp"
                    android:text="@string/company_phone"
                    android:textColor="@color/light_black"
                    android:textSize="15dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_about_kaer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_about_software"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/page_view_bg" >

                <TextView
                    android:id="@+id/about_kaer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/about_software"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/about_kaer"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/about_kaer"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/about_kaer_content"
                    android:textColor="@color/light_black"
                    android:textSize="15dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_copyright"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_about_kaer"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" >

                <ImageView
                    android:id="@+id/kaer_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@null"
                    android:src="@drawable/kaer_logo" />

                <TextView
                    android:id="@+id/about_kaer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/kaer_logo"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:layout_marginTop="3dp"
                    android:paddingBottom="20dp"
                    android:text="@string/copyright"
                    android:textColor="@color/light_black"
                    android:textSize="18dp" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>