<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@color/page_bg_grey"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_msg_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/msg_time_item_bg"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/msg_item_time"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:background="@drawable/msg_item_view_bg"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_msg_image"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/message_image_default"
            android:contentDescription="@null"
            android:scaleType="fitXY" />

        <ImageView
            android:id="@+id/iv_msg_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/unreaded_message"
            android:contentDescription="@null" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="30dp"
            android:layout_toRightOf="@+id/iv_msg_image"
            android:background="@color/white"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_msg_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_item_event"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_msg_mac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/msg_item_mac"
                android:textColor="@color/light_black"
                android:textSize="16dp" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>